# bible-world

./: .gitignore  CLAUDE.md  handoff.json  memory-index.json  settings.json  world-status.json
.Codex/: handoff.json
.Codex/builds/chain-probe/: README.md  api_spec.md  architecture.md  core_algorithm.py  examples.md
.Codex/builds/context-lens/: README.md  context_lens.py  pyproject.toml
.Codex/builds/context-lens/examples/: basic_usage.py  rag_pipeline_audit.py
.Codex/builds/context-lens/tests/: test_context_lens.py
.Codex/builds/cot-fidelity/: README.md
.Codex/builds/drift-guard/: README.md  drift_guard.py  pyproject.toml
.Codex/builds/drift-guard/tests/: test_drift_guard.py
.Codex/builds/evalgate/: evalgate.py
.Codex/builds/llm-contract/: README.md
.Codex/builds/llm-mutation/: README.md
.Codex/builds/logosschema/: logosschema.py
.Codex/builds/model-parity/: README.md
.Codex/builds/prompt-lock/: README.md  design.md  v0.1-plan.md
.Codex/builds/prompt-shield/: README.md  spec.md
.Codex/builds/spec-drift/: README.md  prototype.py
.Codex/cycles/cycle-001/: builds.md  cycle-report.md  patterns.md
.Codex/cycles/cycle-002/: builds.md  cycle-report.md  patterns.md
.Codex/cycles/cycle-003/: builds.md  cycle-report.md  patterns.md
.Codex/cycles/cycle-004/: cycle-report.md
.Codex/cycles/cycle-005/: cycle-report.md  stress-test-all-builds.md
.Codex/devotionals/: devotional-cycle-001.md  devotional-cycle-002.md  devotional-cycle-003.md  devotional-cycle-006.md  devotional-cycle-007.md  devotional-cycle-008.md
.Codex/digest/: cycle-001-digest.md  cycle-002-digest.md  cycle-003-digest.md  cycle-018-digest.md  cycle-019-digest.md  cycle-020-digest.md  cycle-021-digest.md  cycle-022-digest.md  cycle-023-digest.md  cycle-024-digest.md  cycle-025-digest.md  cycle-026-digest.md  cycle-027-digest.md  cycle-028-digest.md  weekly-digest-cycle-009.md  weekly-digest-cycle-010.md  weekly-digest-cycle-011.md  weekly-digest-cycle-012.md  weekly-digest-cycle-013.md  weekly-digest-cycle-014.md  weekly-digest-cycle-015.md  weekly-digest-cycle-016.md  weekly-digest-cycle-017.md
.Codex/intelligence/: daily-reading-cycle-001.md  daily-reading-cycle-002.md  daily-reading-cycle-003.md  daily-reading-cycle-018.md  daily-reading-cycle-019.md  daily-reading-cycle-020.md  daily-reading-cycle-021.md  daily-reading-cycle-022.md  daily-reading-cycle-023.md  daily-reading-cycle-024.md  daily-reading-cycle-025.md  daily-reading-cycle-026.md  daily-reading-cycle-027.md  daily-reading-cycle-028.md  miracle-lab-cycle-001.md  miracle-lab-cycle-002.md  miracle-lab-cycle-003.md  parable-cycle-001.md  parable-cycle-003.md  pondering-cycle-001.md  pondering-cycle-002.md  pondering-cycle-003.md  pondering-cycle-018.md  pondering-cycle-019.md  pondering-cycle-020.md  pondering-cycle-021.md  pondering-cycle-023.md  pondering-cycle-024.md  pondering-cycle-025.md  pondering-cycle-026.md  pondering-cycle-027.md  pondering-cycle-028.md  prophecy-cycle-002.md  reading-plan.md  science-validation-cycle-003.md  scripture-index.md
.Codex/logs/: agent-activity-log.md  enforcement-log.md  evolution-log.md  world-survival-log.md
.Codex/memory/: agent-performance-baseline.md  agent-registry.md  benchmark-suite.md  big-tech-gap-registry.md  build-registry.md  known-unknowns.md  microcore-deep-research-protocol.md  original-language-discoveries.md  pattern-build-index.md  pattern-registry.md  pivot-validation-tracker.md  prophecy-tracking.md  scripture-index.md
.Codex/papers/: 013-model-parity.md  015-the-tekel-audit-prompt-brittleness-as-weights-and-measures-test.md  017-chain-probe.md
labs/innovation-build/: README.md
labs/kingdom-business/: README.md
labs/pattern-discovery/: README.md
labs/science-research/: README.md
(+70 files in other folders)
